[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Tools/Draw.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/Nodes/ValueSlider.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Tools/Pencil.gd" type="Script" id=3]

[node name="ToolOptions" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="ColorRect" parent="." index="0"]
margin_right = 128.0

[node name="Label" parent="." index="1"]
margin_right = 128.0

[node name="Brush" parent="." index="2"]
margin_right = 128.0

[node name="BrushSize" parent="Brush" index="1"]
margin_right = 128.0

[node name="ColorInterpolation" parent="." index="3"]
margin_right = 128.0

[node name="Overwrite" type="CheckBox" parent="." index="4"]
margin_top = 62.0
margin_right = 128.0
margin_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
hint_tooltip = "Overwrites color instead of blending it. This option is only relevant with colors that are not fully opaque"
mouse_default_cursor_shape = 2
text = "Overwrite Color"
__meta__ = {
"_editor_description_": ""
}

[node name="FillInside" type="CheckBox" parent="." index="5"]
margin_top = 90.0
margin_right = 128.0
margin_bottom = 114.0
mouse_default_cursor_shape = 2
text = "Fill Inside"
__meta__ = {
"_editor_description_": ""
}

[node name="SnapMode" type="CheckBox" parent="." index="6"]
margin_top = 118.0
margin_right = 128.0
margin_bottom = 142.0
text = "Spacing"

[node name="StrokeGap" type="VBoxContainer" parent="." index="7"]
visible = false
margin_top = 146.0
margin_right = 128.0
margin_bottom = 198.0

[node name="StrokeX" parent="StrokeGap" index="0" instance=ExtResource( 2 )]
margin_right = 128.0
prefix = "Gap X:"
suffix = "px"

[node name="StrokeY" parent="StrokeGap" index="1" instance=ExtResource( 2 )]
margin_top = 28.0
margin_right = 128.0
margin_bottom = 52.0
__meta__ = {
"_editor_description_": ""
}
prefix = "Gap Y:"
suffix = "px"

[connection signal="toggled" from="Overwrite" to="." method="_on_Overwrite_toggled"]
[connection signal="toggled" from="FillInside" to="." method="_on_FillInside_toggled"]
[connection signal="toggled" from="SnapMode" to="." method="_on_SnapMode_toggled"]
[connection signal="value_changed" from="StrokeGap/StrokeX" to="." method="_on_StrokeX_value_changed"]
[connection signal="value_changed" from="StrokeGap/StrokeY" to="." method="_on_StrokeY_value_changed"]
